--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
+# 你的COMFYUI_HOST机器ip端口
 # COMFYUI_HOST=127.0.0.1:8818
+
+# 这个 PUBLIC 地址可以是 你的服务器真实ip端口(这样是不安全的)，
+# 当然更推荐是你转存资源后的地址。
+# NEXT_PUBLIC_COMFYUI_IMAGE_HOST=https://comfyui.hansking.cn
